# tweak-fir

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParamEdit.cpp  ParamEdit.h  ParamEdit.ui  README.md  tweak.cpp
